Bug 1112043 - Fixed linking problem with gcc 4.6/4.7 and ternary operator with static consts, r=smaug